--- a/index.html
+++ b/index.html
@@ -316,20 +316,20 @@
             <div class="row justify-content-around">
                <div
                   class="col-lg-3 col-md-3 col-10 d-flex align-items-center flex-column justify-content-center contact_share_div">
-                  <p><i class="fa fa-2x fa-envelope" aria-hidden="true"></i></p>
+                  <p><i class="fa fa-2x fa-envelope" aria-hidden="hidden"></i></p>
                   <br />
                   <p class="fw-bold">test@gmail.com</p>
                </div>
                <div
                   class="col-lg-3 col-md-3 col-10 d-flex align-items-center flex-column justify-content-center contact_share_div">
-                  <p><i class="fab fa-2x fa-whatsapp" aria-hidden="true"></i></p>
+                  <p><i class="fab fa-2x fa-whatsapp" aria-hidden="hidden"></i></p>
                   <br />
                   <p class="fw-bold">+91 121212 21212</p>
                </div>
 
                <div
                   class="col-lg-3 col-md-3 col-10 d-flex align-items-center flex-column justify-content-center contact_share_div">
-                  <p><i class="fa 2px fa-map-marker" aria-hidden="true"></i></p>
+                  <p><i class="fa 2px fa-map-marker" aria-hidden="hidden"></i></p>
                   <br />
                   <p class="fw-bold">City</p>
                </div>
@@ -343,17 +343,17 @@
       <div class="container">
          <div class="row justify-content-center">
             <div class="col-lg-1 col-2 socialsites_links">
-               <i class="fab fa-facebook-f fa-2x"></i>
+               <i class="fab fa-facebook-f fa-2x" aria-hidden="hidden"></i>
             </div>
             <div class="col-lg-1 col-2 socialsites_links">
-               <i class="fab fa-2x fa-instagram" aria-hidden="true"></i>
+               <i class="fab fa-2x fa-instagram" aria-hidden="hidden"></i>
             </div>
 
             <div class="col-lg-1 col-2 socialsites_links">
-               <i class="fab fa-2x fa-pinterest" aria-hidden="true"></i>
+               <i class="fab fa-2x fa-pinterest"aria-hidden="hidden"></i>
             </div>
             <div class="col-lg-1 col-2 socialsites_links">
-               <i class="fab fa-2x fa-behance" aria-hidden="true"></i>
+               <i class="fab fa-2x fa-behance" aria-hidden="hidden"></i>
             </div>
 
          </div>
