--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
    <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
    <link rel="stylesheet" href="./assets/Fonts/Proxima-Nova-Font/">
+   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
    
    <style></style>
 </head>
@@ -67,10 +68,10 @@
              
                   <div class="d-flex justify-content-between">
                      <div>
-                        <button class="hire_me"><i class="fas fa-check"></i>Hire Me</button>
+                        <button class="hire_me"><i class="fas fa-check me-3"></i>Hire Me</button>
                      </div>
                      <div class="">
-                        <button class="about_me"><i class="fa fa-user"></i>About me</button>
+                        <button class="about_me"><i class="fa fa-user me-3"></i>About me</button>
                      </div>
                   </div>
                   <!-- <div class="text-center header_mail">
