--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                </div>
                <div class="col-md-6  order-1">
                   <div class="image-wrapper">
-                     <img src="./assets/img/image 1.png" alt="this is right side banner-image" class="img-fluid frame_resp">
+                     <img src="./assets/img/image 1.png" alt="web-assessbility on screen" class="img-fluid frame_resp">
                   </div>
                </div>
             </div>
