--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                         <div class="row error">
                            <label class="required" for="email5"> E-mail *</label>
                            <input type="text" id="email5" name="email" value="superbear@@hq.example.com"
-                              aria-invalid="true" aria-describedby="error_email">
+                              aria-invalid="true" aria-labelledby="label1a label2a" aria-describedby="error_email">
                         </div>
                         <div class="row">
                            <label for="website3">Website</label>
