--- a/index.html
+++ b/index.html
@@ -372,12 +372,12 @@
                            an <span class="required">*</span></p>
                         <div class="row">
                            <label for="name5">Name</label>
-                           <input type="text" id="name5" name="name" value="Superbear">
+                           <input type="text" id="name5" name="name" value="Superbear" aria-label="visible">
                         </div>
                         <div class="row error">
                            <label class="required" for="email5"> E-mail *</label>
                            <input type="text" id="email5" name="email" value="superbear@@hq.example.com"
-                              aria-invalid="true" aria-labelledby="label1a label2a" aria-describedby="error_email">
+                              aria-invalid="true">
                         </div>
                         <div class="row">
                            <label for="website3">Website</label>
