--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                         </div>
                         <div class="row error">
                            <label class="required" for="email5"> E-mail *</label>
-                           <input type="text" id="email5" name="email" value="superbear@@hq.example.com"
+                           <input type="text" id="email5" aria-label="visible" name="email" value="superbear@@hq.example.com"
                               aria-invalid="true">
                         </div>
                         <div class="row">
@@ -385,7 +385,7 @@
                         </div>
                         <div class="row error">
                            <label class="required" for="comment3"> Comment *</label>
-                           <textarea name="comment" id="comment3" aria-invalid="true" aria-describedby="error_comment"
+                           <textarea name="comment" id="comment3" aria-label="visible" aria-invalid="true" aria-describedby="error_comment"
                               spellcheck="false"></textarea>
                         </div>
                      </fieldset>
