--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                         </div>
                         <div class="row error">
                            <label class="required" for="comment3"> Comment *</label>
-                           <textarea name="comment" id="comment3" aria-label="visible" aria-invalid="true" aria-describedby="error_comment"
+                           <textarea name="comment" id="comment3" aria-label="visible" aria-invalid="true" 
                               spellcheck="false"></textarea>
                         </div>
                      </fieldset>
