--- a/index.html
+++ b/index.html
@@ -76,47 +76,61 @@
                                  <div class="modal-body">
                                     <div class="d-flex justify-content-between">
                                        <div class="button-wrapper d-flex">
-                                          <button class="btn btn-primary modal-btn1 modal-btn"><iconify-icon
-                                                icon="tabler:zoom-in-filled"></iconify-icon>Bigger Text</button>
-                                          <button class="btn btn-primary ms-4 modal-btn modal-btn2"><iconify-icon
-                                                icon="fontisto:cursor"></iconify-icon>Bigger Cursor</button>
-                                          <button class="btn btn-primary ms-4 modal-btn modal-btn3"><iconify-icon
-                                                icon="ion:image-sharp"></iconify-icon>Hide-images</button>
-                                          <button class="btn btn-primary ms-4 modal-btn reading-line"><iconify-icon
-                                                icon="fluent:line-horizontal-1-24-filled"></iconify-icon>Reading
-                                             Line</button>
+                                          <button class="btn btn-primary modal-btn1 modal-btn">
+                                             <iconify-icon icon="tabler:zoom-in-filled"></iconify-icon>Bigger Text
+                                          </button>
+                                          <button class="btn btn-primary ms-4 modal-btn modal-btn2">
+                                             <iconify-icon icon="fontisto:cursor"></iconify-icon>Bigger Cursor
+                                          </button>
+                                          <button class="btn btn-primary ms-4 modal-btn modal-btn3">
+                                             <iconify-icon icon="ion:image-sharp"></iconify-icon>Hide-images
+                                          </button>
+                                          <button class="btn btn-primary ms-4 modal-btn reading-line">
+                                             <iconify-icon icon="fluent:line-horizontal-1-24-filled"></iconify-icon>
+                                             Reading
+                                             Line
+                                          </button>
 
                                        </div>
                                     </div>
                                     <div class="d-flex mt-4 justify-content-between">
                                        <div class="button-wrapper d-flex">
-                                          <button class="btn btn-primary modal-btn changefont"><iconify-icon
-                                                icon="fa-solid:font"></iconify-icon>Dyslexic Font</button>
-                                          <button class="btn btn-primary ms-4 modal-btn brightness"><iconify-icon
-                                                icon="ic:baseline-brightness-6"></iconify-icon>Brightness</button>
-                                          <button class="btn btn-primary ms-4 modal-btn invert"><iconify-icon
-                                                icon="mdi:invert-colors"></iconify-icon>Invert</button>
-                                          <button class="btn btn-primary ms-4 modal-btn lineheight"><iconify-icon
-                                                icon="gg:format-line-height"></iconify-icon>Line-height</button>
+                                          <button class="btn btn-primary modal-btn changefont">
+                                             <iconify-icon icon="fa-solid:font"></iconify-icon>Dyslexic Font
+                                          </button>
+                                          <button class="btn btn-primary ms-4 modal-btn brightness">
+                                             <iconify-icon icon="ic:baseline-brightness-6"></iconify-icon>Brightness
+                                          </button>
+                                          <button class="btn btn-primary ms-4 modal-btn invert">
+                                             <iconify-icon icon="mdi:invert-colors"></iconify-icon>Invert
+                                          </button>
+                                          <button class="btn btn-primary ms-4 modal-btn lineheight">
+                                             <iconify-icon icon="gg:format-line-height"></iconify-icon>Line-height
+                                          </button>
                                        </div>
                                     </div>
                                     <div class="d-flex mt-4 justify-content-between">
                                        <div class="button-wrapper d-flex">
 
-                                          <button class="btn btn-primary modal-btn contrast"><iconify-icon
-                                                icon="mdi:contrast-circle"></iconify-icon>Contrast</button>
+                                          <button class="btn btn-primary modal-btn contrast">
+                                             <iconify-icon icon="mdi:contrast-circle"></iconify-icon>Contrast
+                                          </button>
 
-                                          <button class="btn ms-4 btn-primary modal-btn saturation"><iconify-icon
-                                                icon="tdesign:s aturation"></iconify-icon>Saturation</button>
+                                          <button class="btn ms-4 btn-primary modal-btn saturation">
+                                             <iconify-icon icon="tdesign:s aturation"></iconify-icon>Saturation
+                                          </button>
 
-                                          <button class="btn ms-4 btn-primary modal-btn grayscale"><iconify-icon
-                                                icon="tdesign:saturation"></iconify-icon>Grayscale</button>
-                                          <button class="btn ms-4 btn-primary modal-btn appreadingmask"><iconify-icon
-                                                icon="tdesign:saturation"></iconify-icon>app Reading mask</button>
+                                          <button class="btn ms-4 btn-primary modal-btn grayscale">
+                                             <iconify-icon icon="tdesign:saturation"></iconify-icon>Grayscale
+                                          </button>
+                                          <button class="btn ms-4 btn-primary modal-btn appreadingmask">
+                                             <iconify-icon icon="tdesign:saturation"></iconify-icon>app Reading mask
+                                          </button>
                                           <button class="btn ms-4 btn-primary modal-btn assessbility_reading_mask_dark">
 
-                                             <iconify-icon
-                                                icon="tdesign:saturation"></iconify-icon>assessbility_reading_mask_dark</button>
+                                             <iconify-icon icon="tdesign:saturation"></iconify-icon>
+                                             assessbility_reading_mask_dark
+                                          </button>
                                        </div>
                                     </div>
                                  </div>
@@ -124,7 +138,7 @@
                                     <div class="button-wrapper d-flex">
                                        <button type="button" class="btn btn-secondary"
                                           data-bs-dismiss="modal">Close</button>
-                                       <button type="button" class="btn btn-success">Reset Settings</button>
+                                       <button type="button" class="btn btn-success reset-btn">Reset Settings</button>
                                     </div>
                                  </div>
                               </div>
@@ -452,18 +466,19 @@
    </footer>
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-   <script type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js">
+   </script>
    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
    <script src="./assets/js/script.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"></script>
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+      </script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"></script>
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+      </script>
    <div class="accessibility_line"></div>
    <div class="accessibly-app-reading-mask-top accessibly-app-reading-mask" style="height: 200px;"></div>
    <div class="accessibly-app-reading-mask-bottom accessibly-app-reading-mask" style="height: 11px;"></div>
 </body>
+
 </html>
