--- a/index.html
+++ b/index.html
@@ -400,9 +400,7 @@
                   </form>
                </div>
                <div class="col-md-3 col-10 contact_img">
-                  <figure>
-                     <img src="./assets/img/call-center-concept-illustration_114360-2045.avif" class="img-fluid">
-                  </figure>
+                     <img src="./assets/img/call-center-concept-illustration_114360-2045.avif" alt="form-img" class="img-fluid">
                </div>
             </div>
          </div>
