--- a/index.html
+++ b/index.html
@@ -955,8 +955,12 @@
          <div
             class="accessibly-app-reading-mask-top accessibly-app-reading-mask"
             style="height: 200px"
-            ></div>
+            >
+         </div>
          <div
+            class="accessibly-app-reading-mask-bottom accessibly-app-reading-mask"
+            style="height: 200px"
+            ></div>
       </main>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
       <!-- Custom Script to toggle hamburger visibility -->
